--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,14 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="page-header">
-      Header
-    </header>
+
+    //= template/header.html
 
     <div class="content">
       Content
     </div>
 
-    <footer class="page-footer">
-      Footer
-    </footer>
+    //= template/footer.html
 
     <script src="js/script.js"></script>
     <!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
