--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="image/img-shortcut.png">
-    <link rel="stylesheet" href="../bower_components/normalize.css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -16,7 +15,7 @@
     //= template/header.html
 
     <div class="content">
-      Content
+      Content of Wanderer
     </div>
 
     //= template/footer.html
